--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,13 +26,12 @@ jobs:
         version: 12
     
     - name: GitHub Action for Yarn
-      uses: Borales/actions-yarn@v2.3.0
+    - uses: borales/actions-yarn@v2.0.0
       with:
-        # Yarn command
-        cmd: install  #npm install/ yarn install
-
-    - name: Creating build
-      run: yarn build
+          cmd: install # will run `yarn install` command
+    - uses: borales/actions-yarn@v2.0.0
+      with:
+          cmd: build # will run `yarn build` command
 
     - name: installing surge
       run: npm  install -g surge
